--- a/app/views/courses/user_schedule.html.erb
+++ b/app/views/courses/user_schedule.html.erb
@@ -59,7 +59,8 @@ function add_time_slot(courses){
 			for(var k = 1 ; k < timearr[j].length ; k++){
 				var row_id="#day_"+day+"_time_"+timearr[j][k];
 				$(row_id).removeClass("schd-slot-empty");
-				$(row_id).css("background-color",courses[i].color/*+" !important"*/);
+				$(row_id).addClass(courses[i].class);
+				//$(row_id).css("background-color",courses[i].color);
 				//$(row_id).addClass("success");
 				$(row_id).text(courses[i].name);
 				$(row_id).popover({
