--- a/app/views/courses/course_lists_mini.html.erb
+++ b/app/views/courses/course_lists_mini.html.erb
@@ -1,3 +1,17 @@
+
+<% if @table_type=="cart" %>
+
+
+	<div class="bs-callout bs-callout-info ">
+		<!--<h4></h4>-->
+		<p>此為觀察名單，並不會加入課表，若要加至課表請至模擬選課排課</p>
+		<p></p>
+	</div>
+
+
+<% end %>
+
+
 <table class="table table-hover courselist-hover " id="course_table" >
 	<% credit_sum=0 %>
 	<% cos_types=[] %>
