--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
 
-      <a class="navbar-brand" href="<%=root_url%>">NCTU+</a>
+      <a class="navbar-brand" href="<%=root_url%>" style="font-family:arial;">NCTU<sup>+</sup></a>
 			<% image_tag("logo.png", :size=>"80x50")%>
     </div>
 
