--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -96,12 +96,15 @@
 
 <div class="row hidden " id="search_tips">
 	<div id="" class="col-md-10 col-md-offset-1">
-	<div class="bs-callout bs-callout-info ">
-		<!--<h4></h4>-->
-		<p>快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所 [/]:關鍵字</p>
-		<p>搜尋規則: 1CD 5G=>找含有1CD與5G時段的課程(OR) 1CD5G=>找1CD5G的課程(AND) </p>
+		<div class="bs-callout bs-callout-info ">
+			<!--<h4></h4>-->
+			<p>快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所 [/]:關鍵字</p>
+			<p>搜尋規則: 1CD 5G=>找含有1CD與5G時段的課程(OR) 1CD5G=>找1CD5G的課程(AND) </p>
+		</div>
 	</div>
-	</div>
+</div>
+<div class="row">
+	<%= link_to "必修科目表", "http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3", target: "_blank", :class=>"btn btn-primary" %>
 </div>
 <br>
 <div id="search_result" class="row bg-white-transparent">
