--- a/app/views/courses/comment_submit.js.erb
+++ b/app/views/courses/comment_submit.js.erb
@@ -1,2 +1,3 @@
-alert("!!");
-	
+$("#commentList").html('<%=j render :partial=>"comment_list", :locals => {:ct_id=>params[:ctship]}%>');
+$("#comment").val('') ;	
+$('#type').val('1') ;
