--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -9,7 +9,7 @@
 	<% end %>
 	<li class="" id="add_sem"><a href="javascript:void(0);" onclick="show_add_form()">新增學期</a></li>
 	<li class="" id="show_statics"><a href="javascript:void(0);" onclick="show_statics()">統計</a></li>
-	<span class="glyphicon glyphicon-question-sign clickable-hover pull-right" style="color:green !important; "onclick="show_tip('simulation_tips')"></span>
+	<!--<span class="glyphicon glyphicon-question-sign clickable-hover pull-right" style="color:green !important; "onclick="show_tip('simulation_tips')"></span>-->
 </ul>
 
 <div class="row hidden " id="simulation_tips">
