--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
 
 <div id="head_bg" class="carousel slide" data-ride="carousel" style="width:100%;margin-top:-45px;">
   <!-- Indicators -->
-  <ol class="carousel-indicators" style="position:fixed;z-index:5000; margin-top:500px;">
+  <ol class="carousel-indicators hidden" style="//visibility:hidden">
     <li data-target="#head_bg" data-slide-to="0" class="active"></li>
     <li data-target="#head_bg" data-slide-to="1"></li>
     <li data-target="#head_bg" data-slide-to="2"></li>
