create table course_teacher_page_content

--- a/app/views/courses/_comment_list.html.erb
+++ b/app/views/courses/_comment_list.html.erb
@@ -1,7 +1,8 @@
+<% if Comment.where(:course_teachership_id=>ct_id.to_i).count>0 %>
 <table class="table table-bordered background-color-ptt">
 <%Comment.where(:course_teachership_id=>ct_id.to_i).each do |c|%>
 	<tr>
-		<td>
+		<td><p><b>
 <%if c.content_type==1%>
 			<font class="text-color-green">推</font> 
 <%elsif c.content_type==2%>
@@ -9,8 +10,12 @@
 <%else%>
 			<font class="text-color-red">噓</font> 
 <%end%>
-			<%=User.find(c.user_id).name%>		:	<%=c.content%>
-		</td>
+			<%=User.find(c.user_id).name%>		:	<%=c.content%> 
+		</p></td>
 	</tr>			
 <%end%>	
 </table>
+<%else%>
+<p class="text-center"><kbd>尚無討論</kbd></p>
+
+<%end%>
