--- a/app/views/courses/_comment_list.html.erb
+++ b/app/views/courses/_comment_list.html.erb
@@ -16,6 +16,6 @@
 <%end%>	
 </table>
 <%else%>
-<p class="text-center"><kbd>尚無討論</kbd></p>
+<p class="text-center"><strong>尚無討論</strong></p>
 
 <%end%>
