--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -1,13 +1,9 @@
 <% courseTeacher = CourseTeachership.where(:course_id=>params[:id], :teacher_id=>@teacher_show.id).first %>
-<% periodAll = Array.new%>
-<%if Semester.find(courseTeacher.course_details.first.semester_id).name.include?("上")%>
-	<%periodAll.push(2,3,4,5,6)%> 
-<%else%>
-	<%periodAll.push(9,10,11,12,1)%>
-<%end%>
+<% page = CourseTeacherPageContent.where(:course_teachership_id => courseTeacher.id).first.presence || nil%>
+
 <div class="well bs-callout bs-callout-<%=rankTagBar(@target_rank)%>">
 
-<!-- course's teacher and department --!>
+<!-- course's teacher and department -->
 
 	<div class="panel-heading">
 		<h2 class="panel-title">
@@ -18,13 +14,13 @@
 		</h2>	
 	</div>
 
-<!-- course time and classroom info --!>	
+<!-- course time and classroom info -->	
 
 	<div class="panel-heading">
       	<h2 class="panel-title">
       		<p>
 				<i class="fa fa-calendar fa-6"></i> 
-				課程時間/地點：  <%=courseTeacher.course_details.first.room.presence||'無地點資料'%> / <%=courseTeacher.course_details.first.time.presence||'無時間資料'%>			
+				課程時間/地點：  <%=courseTeacher.course_details.first.room.presence||"無地點資料"%> / <%=courseTeacher.course_details.first.time.presence||"無時間資料"%>			
 				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" >
 					<i class="fa fa-search-plus"></i>
 				</a>
@@ -57,7 +53,7 @@
       </div> 
     </div>
  
-<!-- statistics --!>  
+<!-- statistics -->  
    <div class="panel-heading">
 		<h2 class="panel-title">
 			<p>
@@ -72,29 +68,29 @@
 		</div>
    </div>  
 
-<!-- course's content and tick --!>    
+<!-- course's content and tick -->    
     <div class="panel-heading">
 		<h2 class="panel-title">
 			<p>
 				<i class="fa fa-gamepad"></i>			
-				課程攻略： <%=link_to "編輯", "javascript:void(0);"%>	
+				課程攻略： <%=link_to "編輯", "javascript:void(0);", :onclick=>"loadForm("+courseTeacher.id.to_s+");",  "data-toggle"=>"tooltip", "data-placement"=>"right", :title=>"為課程新增或修改內容"%>	
 			</p>
 		</h2>	
 	</div>
 	<div class="panel-body">
-		<div class="well">
-			<%=render :partial=>"course_raider", :locals=>{:periodAll=> periodAll}%>
+		<div class="well" id="raider_content">
+			
 		</div>
 	</div>
 
-<!-- comment for the info in this page --!>
+<!-- comment for the info in this page -->
 	<div class="panel-heading">
 		<h2 class="panel-title">
 			<p>
 				<i class="fa fa-weixin"></i>			
 				討論： 
 				<% if current_user %>
-					<%=link_to "留言","javascript:void(0);",:onclick=>'commentShow($(this));'%>
+					<%=link_to "留言","javascript:void(0);",:onclick=>"commentShow($(this));"%>
 				<% end %>
 			</p>	
 		</h2>	
@@ -102,10 +98,10 @@
 	<div class="panel-body">
 		<div class="row">	
 		<%if current_user%>
-			<div class="well col-sm-7" id="commentNew" style="display:block;">
+			<div class="well col-sm-7" id="commentNew" style="display:none;">
 				<%=form_tag "/courses/comment_submit", :remote=>true, :class=>"form-horizontal",:role=>"form" do%>
 					<div class="form-group">
-						<label class="control-label" for="comment"><%=current_user%>：</label>
+						<label class="control-label" for="comment"><%=current_user.name%>：</label>
 						<%=select_tag "type",options_for_select([["推",1],["->",2],["噓",3]])%>  
 						<%=text_field_tag "comment","推薦這篇文章", :class=>"form-control"%>
 						<%=submit_tag "POST", :class=>"form-control", :id=>"submit_but"%>  
@@ -115,7 +111,7 @@
 			</div>	
 		<% end %>	
 			<div class="row well col-sm-8" id="commentList">
-				<%=render :partial=>'comment_list', :locals => {:ct_id=>courseTeacher.id} %>
+				<%=render :partial=>"comment_list", :locals => {:ct_id=>courseTeacher.id} %>
 			</div>
 		</div>
 	</div>
@@ -123,6 +119,12 @@
 </div>
 
 <script>
+
+	$('#raider_content').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=1') ;
+
+	function loadForm(id){
+		$('#raider_content').load('/courses/course_raider?ct_id='+id+'&type=2');
+	}
 
 	function commentShow(link){
 		if(link.html()=="留言"){
@@ -133,7 +135,7 @@
 			link.html("留言");
 		}				
 	}
-
+/*
 	function colorGradient(but,startColor){
 		graDay = 1 ;
 		var tmp = but;
@@ -170,15 +172,17 @@
 			}
 		}
 	}
-		
+*/		
 	
 	function changeColor(but,color,count_div){
 		if(but.hasClass('active')){
 			$('#'+count_div).html((parseInt($('#hw_num').html())-1).toString()) ;
 			but.removeClass('active').switchClass('btn-'+color, 'btn-default') ;
+			but.attr('id','') ;
 		}else{
 			$('#'+count_div).html((parseInt($('#hw_num').html())+1).toString()) ;
 			but.addClass('active').switchClass('btn-default', 'btn-'+color) ;
+			but.attr('id','1') ;
 		}
 	}
 </script>
