--- a/app/views/courses/comment_submit.js.erb
+++ b/app/views/courses/comment_submit.js.erb
@@ -1,3 +1,4 @@
 $("#commentList").html('<%=j render :partial=>"comment_list", :locals => {:ct_id=>params[:ctship]}%>');
 $("#comment").val('') ;	
 $('#type').val('1') ;
+$("#commentNew").hide();
